[package]
name = "emacs-native-rs"
version = "0.1.0"
authors = ["Sergey Vinokurov <serg.foo@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emacs = ">= 0.17"
# regex = ">= 1.5.7"
glob  = ">= 0.3"

# ignore = ">= 0.4.18"
ignore = { path = "ripgrep/crates/ignore" }