[package]
name = "emacs-native-rs"
version = "0.1.0"
authors = ["Sergey Vinokurov <serg.foo@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["rlib", "cdylib"]
name = "emacs_native_rs"
path = "src/lib.rs"

[[bench]]
name = "bench-fs-search"
path = "src/bin/bench_fs_search.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emacs = ">= 0.17"
crossbeam = ">= 0.8.1"
globset = ">= 0.4.8"
crossbeam-utils = ">= 0.8.0"
